# FILM-BOT

./: .env.dist  .gitignore  Api.py  LICENSE  README.md  main.py  pyproject.toml
doranime/: __init__.py  __main__.py  api.py  config.py  doranime.py  messages.py
