
# main -----------------------------------------------------------------

[tool.poetry]
name = "doranime"
version = "0.1"
description = "Telegram bot for search anime/dorama"
authors = ["Milinuri Nirvalen <pentergust@mail.ru>"]
license = "GPL-3.0-or-later"
readme = "README.md"


# Main depencies -------------------------------------------------------

[tool.poetry.dependencies]
python = "^3.10"
pyTelegramBotAPI = "^4.21.0"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"


# For dev depencies ----------------------------------------------------

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"
mypy = "^1.10.1"
ruff = "^0.5.2"


# Configure ruff -------------------------------------------------------

[tool.ruff]
line-length = 80
indent-width = 4

# Assume Python 3.8
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "D", "N", "PL"]
ignore = ["D407", "D107", "D213", "D203"]


# Setup build system ---------------------------------------------------

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
